--- a/index.html
+++ b/index.html
@@ -5,5 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <nav class="links"></nav>
+    </header>
+    <main></main>
+  </body>
 </html>
