--- a/index.html
+++ b/index.html
@@ -3,12 +3,56 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio</title>
+    <title>PinkFoxsil</title>
+    <meta
+      name="description"
+      content="Roblox portfolio site for the user PinkFoxsil"
+    />
+    <meta name="author" content="Fox" />
+    <meta name="keywords" content="PinkFoxsil Portfolio Roblox" />
+    <link rel="shortcut icon" href="favicon.ico" />
+    <link rel="stylesheet" href="vendor/normalize.css" />
+    <link rel="stylesheet" href="pages/index.css" />
   </head>
   <body>
-    <header class="header">
-      <nav class="links"></nav>
-    </header>
-    <main></main>
+    <div class="page">
+      <header class="header">
+        <nav class="nav">
+          <img
+            src="images/ProfilePicture.png"
+            alt="Profile Picture"
+            class="nav__logo"
+          />
+          <h1 class="nav__title">PinkFoxsil</h1>
+          <ul class="nav__links">
+            <li>
+              <a href="" class="nav__link"></a>
+            </li>
+          </ul>
+        </nav>
+        <div class="about">
+          <p class="about__description">
+            Hello! I'm PinkFoxsil, a Roblox Developer, Game Designer, and
+            Software Engineer.
+          </p>
+        </div>
+      </header>
+      <main class="content">
+        <section class="project">
+          <img src="" alt="" class="project__image" />
+          <p class="project__description">
+            A custom made 3D particle emmiter which includes all 2D emmiter
+            options.
+          </p>
+        </section>
+        <section class="project">
+          <img src="" alt="" class="project__image" />
+          <p class="project__description">
+            A custom made 3D particle emmiter which includes all 2D emmiter
+            options.
+          </p>
+        </section>
+      </main>
+    </div>
   </body>
 </html>
