Working finished version

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <h1 class="nav__title">PinkFoxsil</h1>
           <ul class="nav__links">
             <li>
-              <a href="" class="nav__link"></a>
+              <a href="#contact" class="nav__link">Contact</a>
             </li>
           </ul>
         </nav>
@@ -39,20 +39,155 @@
       </header>
       <main class="content">
         <section class="project">
-          <img src="" alt="" class="project__image" />
-          <p class="project__description">
-            A custom made 3D particle emmiter which includes all 2D emmiter
-            options.
-          </p>
+          <div class="project__media">
+            <div class="project__video">
+              <iframe
+                src="https://www.youtube.com/embed/tQr0x4MpcR8?si=p8rSqkyw_p-65mYE&rel=0"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen
+                class="project__iframe"
+              ></iframe>
+            </div>
+          </div>
+          <div class="project__description">
+            <h2 class="project__title">Relic Rapture</h2>
+            <p class="project__details">
+              2023 ScriptersCF Game-Jam game I helped design and code.
+            </p>
+            <a
+              href="https://www.roblox.com/games/12612101932/Relic-Rapture"
+              target="_blank"
+              class="project__link"
+            >
+              Play Game
+            </a>
+          </div>
         </section>
         <section class="project">
-          <img src="" alt="" class="project__image" />
-          <p class="project__description">
-            A custom made 3D particle emmiter which includes all 2D emmiter
-            options.
-          </p>
+          <div class="project__media">
+            <div class="project__video">
+              <iframe
+                src="https://www.youtube.com/embed/mFhzf29QgKA?si=p8rSqkyw_p-65mYE&rel=0"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen
+                class="project__iframe"
+              ></iframe>
+            </div>
+          </div>
+          <div class="project__description">
+            <h2 class="project__title">Missing Keys</h2>
+            <p class="project__details">
+              2023 ScriptersCF Game-Jam game I created.
+            </p>
+            <a
+              href="https://www.roblox.com/games/14661491108/Missing-Keys"
+              target="_blank"
+              class="project__link"
+            >
+              Play Game
+            </a>
+          </div>
+        </section>
+        <section class="project">
+          <div class="project__media">
+            <div class="project__video">
+              <iframe
+                src="https://www.youtube.com/embed/kLlwpJQcgew?si=p8rSqkyw_p-65mYE&rel=0"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen
+                class="project__iframe"
+              ></iframe>
+            </div>
+          </div>
+          <div class="project__description">
+            <h2 class="project__title">3D Particle Emitter</h2>
+            <p class="project__details">
+              Custom 3D particle emitter I created for my own games.
+            </p>
+          </div>
+        </section>
+        <section class="project">
+          <div class="project__media">
+            <div class="project__video">
+              <iframe
+                src="https://www.youtube.com/embed/GUmZ-yoSqIs?si=p8rSqkyw_p-65mYE&rel=0"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen
+                class="project__iframe"
+              ></iframe>
+            </div>
+          </div>
+          <div class="project__description">
+            <h2 class="project__title">Custom Spells</h2>
+            <p class="project__details">
+              Harry Potter based spells made for a commission.
+            </p>
+            <a
+              href="https://www.roblox.com/games/12707118089/SpellCoding"
+              target="_blank"
+              class="project__link"
+            >
+              Play Game
+            </a>
+          </div>
+        </section>
+        <section class="project">
+          <div class="project__media">
+            <div class="project__video">
+              <iframe
+                src="https://www.youtube.com/embed/jt19Wdh4IlE?si=p8rSqkyw_p-65mYE&rel=0"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen
+                class="project__iframe"
+              ></iframe>
+            </div>
+          </div>
+          <div class="project__description">
+            <h2 class="project__title">Reaction Runaway</h2>
+            <p class="project__details">
+              2023 offical Roblox Game-Jam game I helped script and Design.
+            </p>
+            <a
+              href="https://www.roblox.com/games/12812459785/Reaction-Runaway"
+              target="_blank"
+              class="project__link"
+            >
+              Play Game
+            </a>
+          </div>
         </section>
       </main>
+      <footer class="footer">
+        <div class="contacts" id="contact">
+          <img
+            src="images/discord-mark-white.png"
+            alt="Discord Logo"
+            class="contacts__logo"
+          />
+          <a
+            href="https://discord.com/users/506213980369584128"
+            target="_blank"
+            class="contacts__tag"
+            >pinkfoxsil</a
+          >
+        </div>
+        <p class="footer__copyright">© 2024 PinkFoxsil</p>
+      </footer>
     </div>
   </body>
 </html>
